hashcash-1.18 - 05-Jul-2005 - Adam Back <adam@cypherspace.org>

	* add a simpler minting API to make it easier to mint stamps
	  from VB scripting

hashcash-1.17 - 30-Mar-2005 - Adam Back <adam@cypherspace.org>

	* fix for bug Steve Crook reported with purging and checking
	  at same time.

	* fix for bug Steve Crook reported in double spend checking.
          (Was bug in new hashcash_db_in higher level db function).

	* apply patch from Jonathan Morton which fixes bug triggered
          when minting large stamps (over 31-bits).

	* fix printf vulnerability reported by Tavis Ormandy
          <taviso@gentoo.org>

hashcash-1.16 - 15-Jan-2005 - Adam Back <adam@cypherspace.org>

	* fixed bug with -Z2 (and removed workaround mentioned in 1.15
	  changelog entry)

hashcash-1.15 - 12-Jan-2005 - Adam Back <adam@cypherspace.org>

	* make "Hashcash:" be accepted as well as "X-Hashcash:"
	  suggestion by Simon Josefsson <jas@extundo.com>.  This way
	  if/when the X- is dropped from hashcash headers we will not
	  have a backwards compatibility problem.  (Well not after
	  version 1.15).

	* implement the -Z option to compress stamps; in fact the
	  usage changed so -Z takes an argument: 0, 1 or 2.  0 = not
	  compressed, 1 = compressed but not so the counter + padding
	  is split, and 2 = very compressed, but slow.  (Due to a late
	  discovered bug 2 is the same as 1 for now until I can fix
	  that.)

	* added -O x -sv to request benchtest of core x only

	* make code work with -DOPENSSL, think this slipped during
	  integration of Jonathan's libfastmint as it uses some lower
	  level openssl APIs internally.  I fixed it but it might be
	  a bit openssl version specific, if they changed the state
	  fields at any point.  (This change coincidentally I think
	  should work around the linking with openssl problem that Hal
	  Finney <hal@finney.org> reported).

	* add libhashcash.a intermediate target to make hashcash more