@@ -1,4 +1,4 @@
-HC_VERS = 1.18
+HC_VERS = 1.19
 CHANGEME1 = 1 # put PACKAGER = EBUILD|RPM etc here
 CHANGEME2 = 2
 CHANGEME3 = 3
